# wildberries-notification-bot

./: .env_example  .gitignore  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yaml  pyproject.toml
.github/workflows/: action.yml
alembic/: env.py
alembic/versions/: e0bd6f2411a9_initial_migration.py
config/: config.py
db/: database.py  models.py  pg_manager.py
docker/: app.sh  celery.sh
handlers/: __init__.py  database_info.py  send_product_info.py  start.py  subscribe.py  unexpected.py  unsubscribe.py
keyboards/: inline.py  reply.py
middlewares/: throttling.py
redis_client/: client.py
services/: logging_logic.py  set_bot_commands.py
tgbot/config/: config.py
tgbot/db/: database.py  models.py  pg_manager.py
tgbot/handlers/: __init__.py  database_info.py  send_product_info.py  start.py  subscribe.py  unsubscribe.py
tgbot/keyboards/: inline.py  reply.py
tgbot/middlewares/: throttling.py
tgbot/services/: set_bot_commands.py
tgbot/worker/: fetch_data_to_sub.py  notify.py  tasks.py
worker/: fetch_data_to_sub.py  notify.py  tasks.py
